carousel img spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,4 +68,16 @@ h2, .h2 {
     }
 }
 
+.carousel {
+    .carousel-item {
+        img {
+            margin-bottom: 24px;
+
+            @media (min-width: 992px) {
+                margin-bottom: 0;
+            }
+        }
+    }
+}
+
 /* Minified UI Kit generated from Hofstra WP UI Kit (styles.min.css) */
